# template-python-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  flake.nix  pyproject.toml  pytest.ini  rename.sh  ruff.toml
src/template_python_project/: __main__.py
tests/: test_smoke.py
